# heroku-buildpack-c

./: .gitignore  Makefile.am  Makefile.in  buildpack.toml  cell_logic.c  command.c  configure  configure.ac  fmt_vec.c  machine_logic.c  machine_logic.h  package.toml
autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
